welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: type mismatch;
 found   : String
 required: Int
      return ""+i
               ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to nums.length-1){
        ^